# libid3tag

./: .codespellrc  .gitignore  CHANGES  CMakeLists.txt  CREDITS  README.md  compat.c  compat.gperf  frame.c  genre.dat.cmake  genre.dat.in  render.c  tag.c  utf16.c
.github/workflows/: build.yml
docs/: Doxyfile.in  general_usage_notes.dox  main.dox  packaging.dox  stability.dox
include/: id3tag.h.in
packaging/: id3tag.pc.in
src/: compat.c  compat.gperf  compat.h  crc.c  crc.h  debug.c  debug.h  field.c  field.h  file.c  file.h  frame.c  frame.h  frametype.c  frametype.gperf  frametype.h  genre.c  genre.dat.in  genre.h  global.h  latin1.c  latin1.h  parse.c  parse.h  render.c  render.h  tag.c  tag.h  ucs4.c  ucs4.h  utf16.c  utf16.h  utf8.c  utf8.h  util.c  util.h  version.c  version.h
